# motion-comic-blender

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ACTIONS.md  MMD.md  SERIES.md
examples/: batch.json
examples/fishing/: storyboard.json
motion_comic/: __init__.py  action_catalog.py  action_recipes.py  assets.py  batch.py  builder.py  cache.py  camera.py  compiler.py  easing.py  effects.py  encoding.py  facing.py  layout.py  lipsync.py  mmd_actions.py  mmd_assets.py  mmd_environment.py  motions.py  png.py  registry.py  rig.py  schema.py  series.py  spaces.py  story_prompt.py  storyboard_ai.py  ui_render.py  voice.py
schemas/: action_library.schema.json  action_recipe_library.schema.json  episode_plan.schema.json  mmd_character.schema.json  series.schema.json  story_source.schema.json
scripts/: build_mmd_actions.py  build_mmd_character.py  check_mmd_environment.py  check_project.py  check_story_source.py  compile_episode.py  download_learning_mmd_model.py  generate_demo_assets.py  generate_story_prompt.py  generate_voice.py  list_actions.py  render_batch.py  render_demo.sh  render_storyboard.py  story_creator_ui.py
tests/: test_action_recipes.py  test_actions.py  test_batch.py  test_cache.py  test_camera.py  test_compiler.py  test_easing.py  test_encoding.py  test_facing.py  test_generate_voice.py  test_layout.py  test_lipsync.py  test_mmd_actions.py  test_motion_runtime.py  test_png.py  test_registry.py  test_rig.py  test_schema.py  test_series.py  test_story_prompt.py  test_storyboard_ai.py  test_ui_render.py  test_voice.py
ui/: story_creator.html
(+27 files in other folders)
